--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "public/electron.js",
   "homepage": "./",
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/lab": "^4.0.0-alpha.53",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -16,8 +18,10 @@
     "electron-is-dev": "^1.2.0",
     "flatlist-react": "^1.3.2",
     "react": "^16.13.1",
+    "react-alert": "^7.0.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.1",
     "typescript": "^3.8.3",
     "wait-on": "^4.0.2",
