--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.13.1",
     "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.1",
+    "reactjs-popup": "^1.5.0",
     "typescript": "^3.8.3",
     "wait-on": "^4.0.2",
     "webpack": "4.42.0"
