--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-loader-spinner": "^3.1.14",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactjs-popup": "^1.5.0",
     "typescript": "^3.8.3",
@@ -33,8 +34,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "concurrently \"BROWSER=none npm run-script start-react\" \"wait-on http://localhost:3000 && electron .\"",
-    "w-start": "concurrently \"npm run-script start-react\" \"wait-on http://localhost:3000 && electron .\"",
+    "start": "concurrently \"BROWSER=none npm run-script start-react\" \"wait-on http://localhost:3000/ && electron .\"",
+    "w-start": "concurrently \"npm run-script start-react\" \"wait-on http://localhost:3000/ && electron .\"",
     "postinstall": "electron-builder install-app-deps",
     "preelectron-pack": "npm run-script build",
     "electron-pack": "build -mw"
